--- a/ouro-room-website/src/App.css
+++ b/ouro-room-website/src/App.css
@@ -1,16 +1,32 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  background-color: black;
+  color: white;
+  min-width:100vw;
+  min-height:100vh;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.header {
+  font-size: 3rem;
 }
 
 .logo {
-  height: 6em;
+  /* height: 6em;
   padding: 1.5em;
   will-change: filter;
-  transition: filter 300ms;
+  transition: filter 300ms; */
 }
+
+.button {
+margin: 20px;
+padding: 20px;
+border-radius: 10%;
+margin-top: 50px;
+font-size: 1.5rem;
+color: white;
+}
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
