--- a/ouro-room-website/src/App.css
+++ b/ouro-room-website/src/App.css
@@ -1,39 +1,74 @@
 html,
 body,
 #root {
-  overflow: hidden;
+  overflow-x: hidden;
   text-align: center;
   background-color: black;
   color: white;
   min-width: 100vw;
   min-height: 100vh;
-
-  font-family: "Orbitron", sans-serif;
+  font-family: "Inconsolata", monospace;
   font-optical-sizing: auto;
-  font-weight: weight;
+  font-weight: 600;
   font-style: normal;
+  font-variation-settings: "wdth" 100;
 }
 
 .logo {
   width: 200px;
   animation: vibration 0.15s linear infinite;
+  filter: drop-shadow(0 0 5px rgb(248, 250, 250))
+    drop-shadow(0 0 10px rgb(239, 241, 241));
+}
 
+.logo-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
 }
 
 .header {
-  font-optical-sizing: auto;
+  font-family: "Orbitron", sans-serif;
   display: flex;
   flex-direction: row;
-  position: relative;
+  position: sticky;
+  top: 0;
   z-index: 2;
   align-items: space-between;
   width: 100%;
 }
 
 .button {
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+
+  font-variation-settings: "wdth" 100;
+
   font-size: 1.5rem;
   color: white;
   background-color: transparent;
+}
+
+button.form-button {
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-variation-settings: "wdth" 100;
+  font-size: 1.5rem;
+  color: red; /* Text color */
+  background-color: transparent; /* Transparent background */
+  border: 2px solid red; /* Red outline */
+  border-radius: 6px;
+  transition: background-color 0.3s ease;
+}
+
+button.form-button:hover {
+  background-color: rgba(255, 0, 0, 0.1); /* Optional hover effect */
 }
 
 .button .mantine-Button-inner {
@@ -55,11 +90,18 @@ body,
   pointer-events: none; /* Prevents it from blocking clicks */
 }
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.gallery-test-image {
+  width: 400px;
+  margin: 50px;
+
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.page-intro-text {
+  font-size: 1.5rem !important;
+  color: white !important;
+  text-align: center !important;
+  margin-top: 5%;
+  margin-bottom: 10%;
 }
 
 @keyframes logo-spin {
@@ -105,7 +147,8 @@ body,
   opacity: 1;
   animation: vibration 0.15s linear infinite;
   cursor: pointer;
-  filter: drop-shadow(0 0 5px rgb(248, 250, 250)) drop-shadow(0 0 10px rgb(239, 241, 241));
+  filter: drop-shadow(0 0 5px rgb(248, 250, 250))
+    drop-shadow(0 0 10px rgb(239, 241, 241));
   will-change: transform, width;
   right: 0; /* position from right */
   top: 50%;
