--- a/ouro-room-website/src/index.css
+++ b/ouro-room-website/src/index.css
@@ -1,7 +1,7 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: "Orbitron", sans-serif;
+
+  font-optical-sizing: auto;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -33,19 +33,19 @@ h1 {
   font-size: 3.2em;
 }
 
-button {
+/* button {
   border-radius: 8px;
   border: 1px solid transparent;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
+} */
+/* button:hover {
   border-color: #646cff;
-}
+} */
+ 
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
