--- a/ouro-room-website/frontend/src/App.css
+++ b/ouro-room-website/frontend/src/App.css
@@ -1,42 +1,518 @@
+/* General Reset and Layout */
+html,
+body,
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  overflow-x: hidden;
+  background: black;
+  color: white;
   text-align: center;
+  font-family: "Orbitron", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
+/* Logo Styling */
+img,
+.home-logo,
+.backup-image-gallery,
+.backup-image-home {
+  display: block;
+  margin: 5vh auto;
+  filter: drop-shadow(0 0 0.5vw rgb(248, 250, 250));
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  width: 10vw;
+  animation: vibration 0.15s linear infinite;
+  margin-left: 2vw !important;
+  margin-right: 2vw !important;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.home-logo,
+.backup-image-gallery {
+  width: 50vw;
+  max-width: 400px;
+}
+
+.backup-image-home {
+  width: 25vw;
+  max-width: 200px;
+}
+
+/* Home Container */
+.opening-container {
+  position: relative;
+  z-index: 1;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100vw;
+  padding-left: 5vw;
+  overflow-y: scroll;
+}
+
+/* Header */
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: first baseline;
+}
+
+/* Buttons */
+
+.header-button {
+  font-family: "Orbitron", sans-serif;
+  background: transparent;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.admin-button {
+  color: white;
+  border: 2px solid white !important;
+  padding: 0.5em 1.5em;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 1vw !important;
+  font-size: 1vw !important;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+.mantine-focus-auto.mantine-active.button {
+  color: white;
+  border: 2px solid white !important;
+  padding: 0.5em 1.5em;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 1vw !important;
+
+  font-size: 1vw !important;
+  width: max-content;
+  margin-top: 1vw;
+}
+
+.mantine-focus-auto.mantine-active.button:hover {
+  box-shadow: 0 0 2vw 1vw rgba(50, 146, 181, 0.8);
+  background-color: rgba(255, 255, 255, 0.1); /* optional hover background */
+}
+
+.active-link {
+  border-bottom: 0.3vw solid white;
+}
+
+/* Animation / Background */
+.starfield {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+}
+
+.page-intro-text {
+  font-size: 2vw;
+  margin: 3vh auto;
+  text-align: center;
+  transform: translateX(-50%);
+  opacity: 0;
+  animation: slideInCenter 1s forwards ease-out;
+}
+
+/* Section Layouts */
+.page-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4vh 0;
+  width: 100%;
+}
+
+.latest-mix-scroll-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  padding: 1rem 5vw;
+}
+
+@media (max-width: 768px) {
+  .latest-mix-scroll-container {
+    grid-template-columns: repeat(1, 1fr);
   }
+}
+
+.dj-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2vh;
+  margin-right: 2vw;
+  margin-left: 2vw;
+  border-radius: 1vw;
+  width: 300px; /* or any desired fixed width */
+}
+
+.mix-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2vh;
+  margin-right: 2vw;
+  margin-left: 2vw;
+  border-radius: 1vw;
+  width: 350px; /* or any desired fixed width */
+  background-color: rgb(113, 191, 215);
+}
+
+.page-section-header {
+  font-size: 3vw !important;
+  font-weight: bold;
+  color: white;
+  text-align: left;
+  margin-bottom: 1vh;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.page-section-header:hover {
+  border-color: white;
+}
+
+/* Event + Mix Layouts */
+.event-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  border-radius: 1vw !important;
+
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+/* Next Event Card Styling */
+.event-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #171f26;
+  width: 90vw;
+  box-sizing: border-box;
+  border-radius: 1vw !important;
+
+  flex-wrap: nowrap;
+  overflow-y: scroll;
+  justify-content: space-around;
+}
+
+.event-item {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  max-width: 100%;
+  padding: 3vw !important;
+  justify-content: space-evenly;
+}
+
+.dj-spotlight-card {
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+  max-width: 100%;
+  padding: 3vw !important;
+  justify-content: space-between;
+  background-color: #171f26;
+
+  border-radius: 1vw !important;
+}
+
+.dj-spotlight-card-item {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 2vw !important;
+  justify-content: space-evenly;
+  margin-left: 3vw;
+  margin-right: 3vw;
+}
+
+.event-date {
+  font-size: 1.5vw;
+  font-weight: 600;
+  color: rgb(5, 0, 0);
+  white-space: nowrap;
+  background-color: rgb(113, 191, 215);
+  padding: 4vw;
+  border-radius: 1vw !important;
+}
+
+/* Typography */
+.header-text {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 700;
+  font-size: 2vw !important;
+  color: white;
+  text-align: left;
+  line-height: 1vw;
+  margin: 0 !important;
+}
+
+.body-text {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 400;
+  font-size: 1.2vw;
+  color: white;
+  text-align: left;
+  margin: 0 !important;
+}
+
+.date-text {
+  font-size: 2vw !important;
+}
+
+.location-text {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 400;
+  font-size: 1.2vw;
+  color: white;
+  line-height: 1.5;
+  text-align: left;
+  margin: 0 !important;
+  text-decoration: underline;
+}
+
+.artist-text {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 700;
+  font-size: 2vw !important;
+  color: white;
+  text-align: left;
+  line-height: 1vw;
+  margin-top: 0.5vw;
+  margin-bottom: 0.5vw;
+}
+
+.mix-text {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 700;
+  font-size: 2vw !important;
+  color: rgb(12, 0, 0);
+  line-height: 1vw;
+  margin-top: 0.5vw;
+  margin-bottom: 0.5vw;
+}
+
+.record-placeholder-img {
+  width: 15vw;
+}
+
+.artist-img {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  max-width: 100%;
+  justify-content: space-evenly;
+}
+
+.artist-item {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: space-evenly;
+  margin: 0 !important;
+}
+
+.mix-img {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  max-width: 100%;
+  justify-content: space-evenly;
+}
+
+.mix-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-evenly;
+  margin: 0 !important;
+  color: black;
+}
+
+.about-item {
+  margin-bottom: 4vw !important;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: max-content;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  margin-top: 4vw;
+  margin-top: 5vw;
+}
+
+.rolling-record-container {
+  position: fixed;
+  bottom: 0;
+  z-index: 3;
+}
+
+.rolling-record {
+  width: 200px;
+  animation: roll-record 6s linear infinite;
+}
+
+/* Rotation + horizontal movement */
+@keyframes roll-record {
+  0% {
+    transform: translateX(-80vw) rotate(0deg);
+  }
+  100% {
+    transform: translateX(120vw) rotate(1440deg); /* 4 full spins (360 * 4) */
+  }
+}
+
+.gallery-record {
+  width: 150px;
+  height: auto;
+  margin: 8px;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: hsl(208, 25%, 12%); /* or any color you want */
+  position: relative;
+  /* z-index: 1; */
+  margin: 0 !important;
+  padding-top: 3vh;
+  padding-bottom: 2vh;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  transition: border-color 0.3s ease;
+  max-width: 100vw;
+}
+
+.footer-logo {
+  width: 10vw;
+  animation: vibration 0.15s linear infinite;
+}
+
+.footer-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 2vh !important;
+}
+
+.footer-button {
+  background: transparent;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-family: "Orbitron", sans-serif;
+  margin: 0.5rem;
+  font-size: 1.5vh !important;
+}
+
+/* Animations */
+@keyframes slideInCenter {
   to {
-    transform: rotate(360deg);
+    transform: translateX(0);
+    opacity: 1;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes vibration {
+  0% {
+    transform: translate(0);
+  }
+  25% {
+    transform: translate(-1px, 1px);
+  }
+  50% {
+    transform: translate(-1px, -1px);
+  }
+  75% {
+    transform: translate(1px, 1px);
+  }
+  100% {
+    transform: translate(1px, -1px);
   }
 }
 
-.card {
-  padding: 2em;
+.gallery-img {
+  width: 25vw;
 }
 
-.read-the-docs {
-  color: #888;
+.gallery-container {
+  display: flex;
+  flex-direction: column;
+  overflow-x: scroll;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
+
+.gallery-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-color: 2px solid white !important;
+  align-items: center;
+}
+
+.form-box {
+  width: 200px;
+  background-color: transparent !important;
+  padding: 20px;
+}
+
+.contact-item {
+  display: flex;
+  flex-direction: column;
+  margin: 2vw;
+}
+
+.social-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+}
+
+.social-section {
+  margin: 1vw;
+  font-size: 2vw;
+}
+
