--- a/ouro-room-website/frontend/src/App.css
+++ b/ouro-room-website/frontend/src/App.css
@@ -89,16 +89,15 @@ img,
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  gap: clamp(0.2rem, 2vw, 2rem);
-  padding: clamp(.5vw, 2vw, 2rem);
-  font-size: clamp(.5vw, 1.5vw, 1.2rem);
-  width: max-content;
-  overflow-x: scroll;
+  gap: clamp(0.5vw, .5vw, 2vw) !important;
+  padding: clamp(.5vw, 1vw, 2vw) !important;
+  font-size: clamp(.5vw, 1vw, 2vw) !important;
 }
 
 /* Buttons */
 
 .header-button {
+
   font-family: "Orbitron", sans-serif;
   background: transparent;
   color: white;
@@ -132,6 +131,7 @@ img,
 }
 
 .button {
+  
   color: white;
   border: 2px solid white !important;
   padding: 0.5em 1.5em;
@@ -215,12 +215,11 @@ img,
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2vh;
   margin-right: 2vw;
   margin-left: 2vw;
   border-radius: 1vw;
   width: clamp(250px, 30vw, 85vw);
-  max-width: clamp(250px, 25vw, 350px);
+  max-width: clamp(20vw, 25vw, 35vw);
   background-color: rgb(113, 191, 215);
 }
 
@@ -229,7 +228,6 @@ img,
 .event-container,
 .dj-spotlight-card,
 .form-box {
-  box-shadow: 0 0 1.5vw 0.5vw rgba(0, 174, 255, 0.5); /* blue glow */
   transition: box-shadow 0.3s ease;
 }
 
@@ -426,16 +424,20 @@ img,
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: max-content;
+    min-height: 875px;
+
   margin-left: 20vw;
   margin-right: 20vw;
-  margin-bottom: 6vw;
-  margin-top: 5vw;
+}
+
+.admin-container {
+    min-height: 1075px;
+
 }
 
 .rolling-record-container {
   position: fixed;
-  bottom: 0;
+  bottom: 5vw;
   z-index: 3;
 }
 
@@ -484,6 +486,11 @@ img,
   max-width: 100vw;
 }
 
+.footer-item-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .footer-logo {
   width: 10vw;
   animation: vibration 0.15s linear infinite;
@@ -494,7 +501,6 @@ img,
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 2vh !important;
 }
 
 .footer-button {
@@ -508,8 +514,8 @@ img,
 }
 
 .site-footer {
-  font-size: clamp(0.4vw, .8vw, 1.2vw);
-  padding: clamp(1rem, 2vh, 2rem) clamp(1rem, 5vw, 3rem);
+  font-size: clamp(0.3vw, 1.2vw, .8vw);
+  padding: clamp(1rem, 2vh, 2rem);
   color: white;
   text-align: center;
   margin-top: auto;
@@ -560,18 +566,31 @@ img,
 }
 
 .contact-container {
-  min-height: 100vh;
+  min-height: 875px;
   display: flex;
   justify-content: center; /* horizontal centering */
   align-items: center; /* vertical centering */
   flex-direction: column;
-  padding: 2rem;
+}
+
+.admin-login-container {
+  min-height: 550px;
+  display: flex;
+  justify-content: center; /* horizontal centering */
+  align-items: center; /* vertical centering */
+  flex-direction: column;
 }
 
 .form-box {
   width: 200px;
   background-color: transparent !important;
   padding: 20px;
+}
+
+.login-box {
+width: 200px;
+  background-color: transparent !important;
+  padding: 10px;
 }
 
 .contact-item {
