--- a/ouro-room-website/frontend/src/App.css
+++ b/ouro-room-website/frontend/src/App.css
@@ -39,7 +39,7 @@ img,
 }
 
 .logo-overlay {
- width: 30vw;
+  width: 30vw;
   max-width: 600px;
   min-width: 100px;
 
@@ -89,15 +89,14 @@ img,
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  gap: clamp(0.5vw, .5vw, 2vw) !important;
-  padding: clamp(.5vw, 1vw, 2vw) !important;
-  font-size: clamp(.5vw, 1vw, 2vw) !important;
+  gap: clamp(0.5vw, 0.5vw, 2vw) !important;
+  padding: clamp(0.5vw, 1vw, 2vw) !important;
+  font-size: clamp(0.5vw, 1vw, 2vw) !important;
 }
 
 /* Buttons */
 
 .header-button {
-
   font-family: "Orbitron", sans-serif;
   background: transparent;
   color: white;
@@ -106,15 +105,28 @@ img,
 }
 
 .admin-button {
+  color: grey;
+  border: 2px solid white !important;
+  padding: 0.5em 1.5em;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border-radius: 1vw !important;
+  font-size: 1.5vw !important;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+.back-button {
   color: white;
   border: 2px solid white !important;
   padding: 0.5em 1.5em;
   cursor: pointer;
   transition: all 0.3s ease;
   border-radius: 1vw !important;
-  font-size: 1vw !important;
+  font-size: 1.5vw !important;
   margin-left: 1vw;
   margin-right: 1vw;
+  background-color: grey !important;
 }
 
 .mantine-focus-auto.mantine-active.button {
@@ -131,7 +143,6 @@ img,
 }
 
 .button {
-  
   color: white;
   border: 2px solid white !important;
   padding: 0.5em 1.5em;
@@ -154,8 +165,6 @@ img,
 .active-link {
   border-bottom: 0.3vw solid white;
 }
-
-
 
 /* Animation / Background */
 .starfield {
@@ -326,7 +335,7 @@ img,
 .header-text {
   font-family: "Orbitron", sans-serif;
   font-weight: 700;
-  font-size: clamp(.5vw, 1.5vw, 2.2vw) !important;
+  font-size: clamp(0.5vw, 1.5vw, 2.2vw) !important;
   color: white;
   text-align: left;
   margin: 0 !important;
@@ -424,15 +433,19 @@ img,
   align-items: center;
   justify-content: center;
   text-align: center;
-    min-height: 875px;
+  min-height: 875px;
 
   margin-left: 20vw;
   margin-right: 20vw;
 }
 
 .admin-container {
-    min-height: 1075px;
-
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 25vh;
 }
 
 .rolling-record-container {
@@ -467,59 +480,30 @@ img,
 .footer-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
   background-color: hsl(208, 25%, 12%); /* or any color you want */
   position: relative;
-  /* z-index: 1; */
-  margin: 0 !important;
   padding-top: 3vh;
   padding-bottom: 2vh;
-}
-
-.footer-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
   align-items: center;
-  transition: border-color 0.3s ease;
-  max-width: 100vw;
-}
-
-.footer-item-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer-logo {
-  width: 10vw;
-  animation: vibration 0.15s linear infinite;
+  justify-content: space-around;
 }
 
 .footer-item {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
 }
 
 .footer-button {
   background: transparent;
-  color: white;
+  color: grey !important;
   border: none;
   cursor: pointer;
   font-family: "Orbitron", sans-serif;
-  margin: 0.5rem;
-  font-size: 1.5vh !important;
 }
 
 .site-footer {
-  font-size: clamp(0.3vw, 1.2vw, .8vw);
-  padding: clamp(1rem, 2vh, 2rem);
-  color: white;
-  text-align: center;
-  margin-top: auto;
-  width: 100%;
+  font-size: clamp(0.3vw, 1.5vw, 0.8vw);
+  color: grey;
 }
 
 /* Animations */
@@ -574,7 +558,7 @@ img,
 }
 
 .admin-login-container {
-  min-height: 550px;
+  min-height: 75vh;
   display: flex;
   justify-content: center; /* horizontal centering */
   align-items: center; /* vertical centering */
@@ -588,7 +572,7 @@ img,
 }
 
 .login-box {
-width: 200px;
+  width: 200px;
   background-color: transparent !important;
   padding: 10px;
 }
@@ -617,13 +601,19 @@ width: 200px;
   width: 5vw;
   display: flex;
   justify-content: center;
-  gap: 2rem;
   margin-bottom: 8vh;
+}
+
+.footer-social-icons {
+  display: flex;
+  color: grey !important;
 }
 
 .social-link {
   color: white;
   transition: transform 0.3s ease, color 0.3s ease;
+  padding-left: 1vw;
+  padding-right: 1vw;
 }
 
 .social-link:hover {
