--- a/ouro-room-website/ouro-frontend/src/App.css
+++ b/ouro-room-website/ouro-frontend/src/App.css
@@ -142,7 +142,7 @@ img,
 }
 
 .admin-button {
-  color: grey;
+  color: black;
   border: 2px solid white !important;
   padding: 0.5em 1.5em;
   cursor: pointer;
@@ -151,6 +151,7 @@ img,
   font-size: 1.5vw !important;
   margin-left: 1vw;
   margin-right: 1vw;
+  font-weight: 600;
 }
 
 .back-button {
@@ -159,22 +160,24 @@ img,
   cursor: pointer;
   border-radius: 1vw !important;
   font-size: 1vw !important;
-  background-color:  rgb(113, 191, 215);
+  background-color: rgb(113, 191, 215);
   position: relative;
   width: max-content;
   margin-right: 2vw;
 }
 
 .select-button {
-  color: white !important;
+  color: black !important;
   border: 2px solid white !important;
   cursor: pointer;
   border-radius: 1vw !important;
-  font-size: 1vw !important;
-  background-color:  rgb(113, 191, 215);
+  font-size: 0.7vw !important;
+  background-color: rgb(255, 255, 255);
   position: relative;
   width: max-content;
   margin: 1vw;
+  font-weight: 600;
+  color: rgb(229, 172, 225);
 }
 
 .rsvp-container {
@@ -193,7 +196,7 @@ img,
   position: relative;
   width: max-content;
   margin: 1vw;
-  padding: .5vw;
+  padding: 0.5vw;
 }
 
 .select-button-special {
@@ -202,7 +205,7 @@ img,
   cursor: pointer;
   border-radius: 1vw !important;
   font-size: 1vw !important;
-  background-color:  rgb(113, 191, 215);
+  background-color: rgb(113, 191, 215);
   position: relative;
   width: max-content;
   margin: 1vw;
@@ -213,17 +216,17 @@ img,
   border: 2px solid white !important;
   cursor: pointer;
   border-radius: 1vw !important;
-  font-size: 1vw !important;
-  background-color:  rgb(188, 49, 95);
+  font-size: 0.7vw !important;
+  background-color: rgb(188, 49, 95);
   position: relative;
   width: max-content;
   margin: 1vw;
+  font-weight: 600;
 }
 
 .select-item {
   margin: 1vw;
   color: black;
-
 }
 
 .select-row {
@@ -231,7 +234,6 @@ img,
   flex-direction: row;
   align-items: center;
   text-align: left;
- 
 }
 
 .submit-button {
@@ -240,7 +242,7 @@ img,
   cursor: pointer;
   border-radius: 1vw !important;
   font-size: 1vw !important;
-  background-color:  rgb(113, 191, 215);
+  background-color: #171f26;
   position: relative;
   width: max-content;
 }
@@ -283,10 +285,14 @@ img,
 }
 
 .mantine-focus-auto.mantine-active.button:hover,
-.admin-button:hover {
-  box-shadow: 0 0 2vw 1vw  rgb(113, 191, 215);
-  background-color:  rgb(113, 191, 215); /* optional hover background */
+.admin-button:hover,
+.admin-button:hover,
+.submit-button:hover,
+.back-button:hover {
+  box-shadow: 0 0 2vw 1vw rgb(113, 191, 215);
+  background-color: transparent;
   cursor: pointer;
+  color: white;
 }
 
 .active-link {
@@ -317,15 +323,25 @@ img,
 .page-section {
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 4vh 0;
   width: 100%;
+  margin-bottom: 3vh;
 }
 
 .latest-mix-scroll-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   width: 90vw;
+}
+
+.latest-mix-section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
 
 @media (max-width: 768px) {
@@ -339,11 +355,25 @@ img,
   flex-direction: column;
   align-items: center;
   padding: 2vh;
-  margin-right: 2vw;
-  margin-left: 2vw;
+  margin-right: 1vw;
+  margin-left: 1vw;
   border-radius: 1vw;
-  width: 80vw;
   max-width: 350px;
+  
+}
+
+.dj-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  margin: 2vw;
+}
+
+.dj-img {
+  width: 12vw;
+  margin: 2vw;
 }
 
 .mix-card {
@@ -351,11 +381,15 @@ img,
   flex-direction: column;
   align-items: center;
   border-radius: 1vw;
-  margin: 2vw;
+  margin: 1.5vw;
+  margin-bottom:2vw;
   width: clamp(250px, 25vw, 85vw);
   background-color: rgb(113, 191, 215);
-  padding: 1vw;
+  padding: .5vw;
+  border: 2px solid white;
+
 }
+
 
 .mix-container {
   width: 80vw;
@@ -372,7 +406,6 @@ img,
 .mix-card:hover,
 .dj-card:hover,
 .event-container:hover,
-.form-box:hover,
 .dj-spotlight-card:hover {
   box-shadow: 0 0 2vw 1vw rgba(0, 174, 255, 0.8);
 }
@@ -386,6 +419,7 @@ img,
   width: 90%;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 3vh;
 }
 
 .page-section-header:hover {
@@ -399,9 +433,10 @@ img,
   flex-direction: row;
   flex-wrap: wrap;
   border-radius: 1vw !important;
-
-  justify-content: space-evenly;
+  border: 2px solid white;
+  justify-content: space-between;
   align-items: center;
+  margin-bottom: 2vh;
 }
 
 /* Next Event Card Styling */
@@ -423,35 +458,64 @@ img,
   display: flex;
   flex-direction: column;
   text-align: left;
-  max-width: 100%;
   padding: 3vw !important;
   justify-content: space-evenly;
+  width: max-content;
+  align-items: center;
+  min-width: 30vw;
 }
 
-.dj-spotlight-card {
+.event-item-section {
+  margin-top: 2vw;
+  margin-bottom: 2vw;
+}
+
+.big-text {
+  font-size: 3vw;
+}
+
+.small-text {
+  font-size: 1.5vw;
+}
+
+.mantine-focus-auto.dj-spotlight-card {
   display: flex;
   flex-direction: row;
   text-align: left;
   max-width: 100%;
   padding: 3vw !important;
   justify-content: space-between;
-  background-color: #171f26;
   position: relative;
   border-radius: 1vw !important;
+
+}
+
+.dj-spotlight-card {
+  display: flex;
+  flex-direction: row;
+  padding: 1vw !important;
+  padding-top: 2vw !important;
+  padding-bottom: 2vw !important;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #171f26;
+  width: max-content;
+  border-radius: 1vw;
+  margin: 2vw;
+  height: 30vh;
+  border: 2px solid white;
+}
+
+.dj-text {
+  margin: 5vh !important;
+  max-width: 30vw;
 }
 
 .dj-spotlight-card-item {
   display: flex;
   flex-direction: column;
-  text-align: left;
-  padding: 2vw !important;
-  justify-content: space-evenly;
-  margin-left: 3vw;
-  margin-right: 3vw;
-}
-
-.card-item {
-  margin: 0 !important;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .select-container {
@@ -470,7 +534,6 @@ img,
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: flex-start;
-  margin: 2vw;
 }
 
 .event-select-card {
@@ -485,11 +548,12 @@ img,
   display: flex;
   flex-direction: column;
   height: max-content;
-  color:white;
+  color: white;
   border-radius: 1vw;
   margin: 2vw;
   min-height: 300px;
-  align-items: center;
+  align-items: left;
+  
 }
 
 .select-card {
@@ -512,13 +576,11 @@ img,
 }
 
 .gallery-select-card {
-  background-color:  #171f26;
+  background-color: #171f26;
   justify-content: space-around;
   width: max-content;
   z-index: 9;
-  padding-left: 1vw;
-  padding-right: 1vw;
-  text-align: left;
+  padding: 1vw;
   display: flex;
   flex-direction: column;
   color: white;
@@ -529,14 +591,16 @@ img,
 
 .gallery-select-img {
   width: 15vw;
+  height: auto;
+  margin: 1vw;
 }
 
 .select-item-header {
-  font-size: 1.2vw !important;
+  font-size: 1.5vw !important;
 }
 
 .select-item-footer {
-  font-size: 1vw;
+  font-size: 0.7vw;
 }
 
 .mantine-Text-root {
@@ -544,13 +608,13 @@ img,
 }
 
 .event-date {
-  font-size: 1.5vw;
+  font-size: 2vw;
   font-weight: 600;
   color: rgb(5, 0, 0);
-  white-space: nowrap;
   background-color: rgb(113, 191, 215);
-  padding: 4vw;
+  padding: 3vw;
   border-radius: 1vw !important;
+  text-align: center;
 }
 
 /* Typography */
@@ -559,7 +623,7 @@ img,
   font-weight: 700;
   font-size: clamp(0.5vw, 1.5vw, 2.2vw) !important;
   color: white;
-  text-align: left;
+  /* text-align: left; */
   margin: 0 !important;
 }
 
@@ -568,8 +632,21 @@ img,
   font-weight: 400;
   font-size: 1.2vw;
   color: white;
-  text-align: left;
+  text-align: center;
   margin: 0 !important;
+}
+
+.event-card-section {
+  display: flex;
+  flex-direction: row;
+  width: 30vw;
+  justify-content: space-around;
+  margin: 1vw;
+}
+
+.event-card-item {
+  margin-top: 2vh !important;
+  margin-bottom: 2vh !important;
 }
 
 .date-text {
@@ -596,12 +673,24 @@ img,
   line-height: 1vw;
   margin-top: 0.5vw;
   margin-bottom: 0.5vw;
+  width: max-content;
 }
 
 .mix-text {
   font-family: "Orbitron", sans-serif;
   font-weight: 700;
-  font-size: 2vw !important;
+  font-size: 1.5vw !important;
+  color: rgb(12, 0, 0);
+  line-height: 1vw;
+  margin-top: 0.5vw;
+  margin-bottom: 0.5vw;
+}
+
+.mix-text-small {
+  margin-top: 3vh;
+  font-family: "Orbitron", sans-serif;
+  font-weight: 700;
+  font-size: 1vw !important;
   color: rgb(12, 0, 0);
   line-height: 1vw;
   margin-top: 0.5vw;
@@ -611,9 +700,9 @@ img,
 /* Image fixes */
 .record-placeholder-img {
   height: 200;
-  width: 300px;
+  width: 15vw;
   margin: 0;
-  padding: 2vw;
+  padding: 1vw;
 }
 
 .artist-img {
@@ -656,19 +745,19 @@ img,
   align-items: center;
   justify-content: center;
   text-align: center;
-  min-height: 875px;
-
+height: 70vh;
   margin-left: 20vw;
   margin-right: 20vw;
 }
 
 .admin-container {
+  margin-top: 5vh;
   min-height: 45vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  margin-bottom: 25vh;
+  margin-bottom: 20vh;
 }
 
 .select-header {
@@ -710,7 +799,7 @@ img,
 .footer-container {
   display: flex;
   flex-direction: row;
-  background-color:  #171f26; /* or any color you want */
+  background-color: #171f26; /* or any color you want */
   position: relative;
   padding-top: 3vh;
   padding-bottom: 2vh;
@@ -786,11 +875,10 @@ img,
 }
 
 .contact-container {
-  min-height: 875px;
   display: flex;
-  justify-content: center; /* horizontal centering */
   align-items: center; /* vertical centering */
   flex-direction: column;
+  margin-bottom: 2vw;
 }
 
 .admin-login-container {
@@ -802,7 +890,7 @@ img,
 }
 
 .form-box {
-  width: 200px;
+  width: 250px;
   background-color: transparent !important;
   color: white;
 }
@@ -817,7 +905,12 @@ img,
   display: flex;
   flex-direction: column;
   margin: 2vw;
+  margin-right: 5vw;
+  margin-left: 5vw;
   align-items: center;
+  border: 2px solid white;
+  border-radius: 1vw;
+  font-size: 1vw;
 }
 
 .social-container {
@@ -837,12 +930,14 @@ img,
   width: 5vw;
   display: flex;
   justify-content: center;
-  margin-bottom: 8vh;
+  margin-bottom: 2vh;
 }
 
 .footer-social-icons {
   display: flex;
   color: grey !important;
+  margin-right: 1vw;
+  margin-left: 1vw;
 }
 
 .social-link {
@@ -868,7 +963,6 @@ img,
 }
 
 .audio-controls {
-  padding-left: 2vw;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -877,8 +971,8 @@ img,
 }
 
 .audio-light {
-  width: 12px;
-  height: 12px;
+  width: 1vw;
+  height: 1vw;
   border-radius: 50%;
   background-color: red;
   opacity: 0.6;
@@ -900,7 +994,10 @@ img,
 
 .audio-label {
   font-weight: 500;
+  font-size: 1vw;
 }
+
+
 
 .icon-button {
   border: none !important;
@@ -912,3 +1009,37 @@ img,
   align-items: center;
   justify-content: center;
 }
+
+.profile-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.profile-button-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  margin: 5vw;
+}
+
+.profile-info {
+   display: flex;
+  flex-direction: column;
+  align-items: left;
+  text-align: left;
+}
+
+.profile-img {
+  width: 30vw;
+  margin: 10vw;
+}
+
+.profile-text-big {
+  color: white;
+  z-index: 11;
+  position: relative;
+  font-size: 1.5vw;
+}
+
